umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_rdkit_4FTR_lig.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 33
bond_count: 36
sum_formula: C24N4O5
graph6: "`hH?GCA?G?_H?@??_?G?O??C?@G??G??C??G???W???_??@???@????_???G???O????C???AG????G????C????A"
