umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_rdkit_CHEMBL2321810_scaffold.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 17
bond_count: 17
sum_formula: C7H2NO3S
graph6: PiCGGCACG@?@O?@??G??_A??
