umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_moleculelike_rdkit_CHEMBL501674_3D.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 98
bond_count: 101
sum_formula: C33H52O13
graph6: ~?@a@CGGC@?I?o??@o?C???D??M???@???_???@???G???_??@???@???G_??@????C????O_????????G????C????@?????G?????_????@?????P?????G?????A??????O?????@??????@?_??????G???????@???????????GA???????G???????G???????C????????O????????_???????A????????G????????C????????A?????????_????????C?????????C?????????O?????????_?????????G?????????@??????????G?????????@??????????A??????????A??????????@???????????_??????????G???????????_??????????@???????????@???????????@????????????G???????????@????????????C????????????G????????????G?????????????_????????????G????????????A?????????????O?????????????_????????????@?????????????@??????????????O?????????????C??????????????_??????????????_?????????????@??????????????@???????????????O??????????????C???????????????_?????????_??????????????O???????????????G???????????????
